force-app/main/default/objects/Backcharge__c/Backcharge__c.object-meta.xml
<CustomObject>
    <label>Backcharge</label>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Backcharge Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backcharges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>