force-app/main/default/objects/Backcharge__c/fields/ChargedAmountBRL__c.field-meta.xml
<CustomField>
    <fullName>ChargedAmountBRL__c</fullName>
    <label>Charged Amount (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>