force-app/main/default/objects/Backcharge__c/fields/ChargedAmountSumUSD__c.field-meta.xml
<CustomField>
    <fullName>ChargedAmountSumUSD__c</fullName>
    <label>Charged Amount Sum (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>