force-app/main/default/objects/Backcharge__c/fields/ChargedAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>ChargedAmountUSD__c</fullName>
    <label>Charged Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>