force-app/main/default/objects/Backcharge__c/fields/ChargedDate__c.field-meta.xml
<CustomField>
    <fullName>ChargedDate__c</fullName>
    <label>Charged Date</label>
    <type>Date</type>
</CustomField>