force-app/main/default/objects/Backcharge__c/fields/Coments__c.field-meta.xml
<CustomField>
    <fullName>Coments__c</fullName>
    <label>Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>