force-app/main/default/objects/Backcharge__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Choppers</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
                <isActive>false</isActive>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>Logistics and Materials</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
                <isActive>false</isActive>
                <label>Rental</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>