force-app/main/default/objects/Backcharge__c/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter</label>
    <referenceTo>Letter__c</referenceTo>
    <relationshipLabel>Backcharges</relationshipLabel>
    <relationshipName>Backcharges</relationshipName>
    <type>Lookup</type>
</CustomField>