force-app/main/default/objects/Backcharge__c/fields/LetterGroup__c.field-meta.xml
<CustomField>
    <fullName>LetterGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter Group</label>
    <referenceTo>LetterGroup__c</referenceTo>
    <relationshipLabel>Backcharges</relationshipLabel>
    <relationshipName>Backcharges</relationshipName>
    <type>Lookup</type>
</CustomField>