force-app/main/default/objects/Backcharge__c/fields/MonthBooked__c.field-meta.xml
<CustomField>
    <fullName>MonthBooked__c</fullName>
    <label>Month Booked</label>
    <type>Date</type>
</CustomField>