force-app/main/default/objects/Backcharge__c/fields/ReleasedDate__c.field-meta.xml
<CustomField>
    <fullName>ReleasedDate__c</fullName>
    <label>Released Date</label>
    <type>Date</type>
</CustomField>