force-app/main/default/objects/Backcharge__c/fields/Subgroup__c.field-meta.xml
<CustomField>
    <fullName>Subgroup__c</fullName>
    <label>Subgroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANP</fullName>
            </value>
            <value>
                <fullName>Antifoam</fullName>
                <isActive>false</isActive>
                <label>Antifoam</label>
            </value>
            <value>
                <fullName>Biocide</fullName>
                <isActive>false</isActive>
                <label>Biocide</label>
            </value>
            <value>
                <fullName>Biocide Biodispersant</fullName>
                <isActive>false</isActive>
                <label>Biocide Biodispersant</label>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Chlorine Scavenger</fullName>
                <isActive>false</isActive>
                <label>Chlorine Scavenger</label>
            </value>
            <value>
                <fullName>Demulsifier</fullName>
                <isActive>false</isActive>
                <label>Demulsifier</label>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
                <isActive>false</isActive>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>Ethanol</fullName>
                <isActive>false</isActive>
                <label>Ethanol</label>
            </value>
            <value>
                <fullName>Extra flights</fullName>
            </value>
            <value>
                <fullName>Extra meals</fullName>
                <isActive>false</isActive>
                <label>Extra meals</label>
            </value>
            <value>
                <fullName>Extra seats</fullName>
            </value>
            <value>
                <fullName>IBAMA</fullName>
            </value>
            <value>
                <fullName>MEG</fullName>
                <isActive>false</isActive>
                <label>MEG</label>
            </value>
            <value>
                <fullName>No show</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Oxygen Scavenger</fullName>
                <isActive>false</isActive>
                <label>Oxygen Scavenger</label>
            </value>
            <value>
                <fullName>R7</fullName>
            </value>
            <value>
                <fullName>REPETRO</fullName>
                <isActive>false</isActive>
                <label>REPETRO</label>
            </value>
            <value>
                <fullName>Scale Inhibitor</fullName>
                <isActive>false</isActive>
                <label>Scale Inhibitor</label>
            </value>
            <value>
                <fullName>Seaport</fullName>
            </value>
            <value>
                <fullName>Supply Vessel</fullName>
                <isActive>false</isActive>
                <label>Supply Vessel</label>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>TEG</fullName>
                <isActive>false</isActive>
                <label>TEG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>