force-app/main/default/objects/Backcharge__c/fields/TotalAmountBRL__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountBRL__c</fullName>
    <label>Total Amount (BRL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>