force-app/main/default/objects/Backcharge__c/fields/TotalAmountSumUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountSumUSD__c</fullName>
    <label>Total Amount Sum (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>