force-app/main/default/objects/Backcharge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vessel__c</columns>
    <columns>Group__c</columns>
    <columns>Subgroup__c</columns>
    <columns>MonthComp__c</columns>
    <columns>MonthBooked__c</columns>
    <columns>VesselContract__c</columns>
    <columns>Status__c</columns>
    <columns>ChargedDate__c</columns>
    <columns>TotalAmountBRL__c</columns>
    <columns>ChargedAmountBRL__c</columns>
    <columns>ChargedAmountUSD__c</columns>
    <columns>TotalAmountUSD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Administrator</role>
        <role>Commercial</role>
        <role>VesselContractAdministrator</role>
        <role>Vessel_Contract_Read</role>
    </sharedTo>
</ListView>