force-app/main/default/objects/Backcharge__c/listViews/MV15.listView-meta.xml
<ListView>
    <fullName>MV15</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Coments__c</columns>
    <columns>TotalAmountBRL__c</columns>
    <columns>ChargedAmountBRL__c</columns>
    <columns>TotalAmountUSD__c</columns>
    <columns>ChargedAmountUSD__c</columns>
    <columns>MonthComp__c</columns>
    <columns>MonthBooked__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV15</value>
    </filters>
    <label>MV15</label>
</ListView>