force-app/main/default/objects/Backcharge__c/listViews/MV20.listView-meta.xml
<ListView>
    <fullName>MV20</fullName>
    <columns>VesselShortName__c</columns>
    <columns>NAME</columns>
    <columns>Group__c</columns>
    <columns>Subgroup__c</columns>
    <columns>Status__c</columns>
    <columns>MonthComp__c</columns>
    <columns>MonthBooked__c</columns>
    <columns>TotalAmountBRL__c</columns>
    <columns>ChargedDate__c</columns>
    <columns>ChargedAmountBRL__c</columns>
    <columns>Coments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV20</value>
    </filters>
    <label>MV20</label>
</ListView>