force-app/main/default/objects/Backcharge__c/listViews/MV27.listView-meta.xml
<ListView>
    <fullName>MV27</fullName>
    <columns>NAME</columns>
    <columns>VesselShortName__c</columns>
    <columns>Group__c</columns>
    <columns>Subgroup__c</columns>
    <columns>Quantity__c</columns>
    <columns>MonthComp__c</columns>
    <columns>MonthBooked__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vessel__c</field>
        <operation>contains</operation>
        <value>MV27</value>
    </filters>
    <label>MV27</label>
</ListView>